--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "loop trace",
   "scripts": {
-    "start": "ts-node src/cli/main.ts"
+    "cli": "ts-node src/cli/main.ts"
   },
   "repository": {
     "type": "git",
@@ -15,7 +15,12 @@
   "author": "syntachaosx",
   "license": "ISC",
   "dependencies": {
+    "funkydice": "^1.0.12",
+    "node-notifier": "^9.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.40"
   }
 }
