--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "funkydice": "^1.0.12",
+    "minimist": "^1.2.5",
     "node-notifier": "^9.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
