--- a/package.json
+++ b/package.json
@@ -1,27 +1,50 @@
 {
-  "name": "loop_game",
-  "version": "0.0.1",
-  "description": "loop game",
-  "scripts": {
-    "cli": "ts-node src/cli/main.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/syntachaosx/loop-game.git"
-  },
-  "keywords": [
-    "An Adventure Game"
-  ],
-  "author": "syntachaosx",
-  "license": "ISC",
+  "name": "teal",
+  "version": "0.2.0",
+  "private": true,
   "dependencies": {
-    "funkydice": "^1.0.12",
-    "minimist": "^1.2.5",
-    "node-notifier": "^9.0.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@primer/octicons-react": "^16.1.1",
+    "@reduxjs/toolkit": "^1.7.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "classnames": "^2.3.1",
+    "http-proxy-middleware": "^2.0.1",
+    "polished": "^4.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
+    "react-redux": "^7.2.6",
+    "react-scripts": "^5.0.0",
+    "react-select": "^5.2.1",
+    "web-vitals": "^1.1.2"
   },
-  "devDependencies": {
-    "@types/node": "^14.14.40"
+  "scripts": {
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
